--- a/examples/helloworld.html
+++ b/examples/helloworld.html
@@ -20,7 +20,7 @@
         '*': {
           'templating': 'dist/amd/index',
           'di': 'node_modules/di/dist/amd/index',
-          'assert': 'node_modules/assert/dist/amd/assert',
+          'rtts-assert': 'node_modules/rtts-assert/dist/amd/assert',
           'expressionist': 'node_modules/expressionist/dist/amd/index',
           'watchtower': 'node_modules/watchtower/dist/amd/index'
         }
